chnage sin ref chart

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-19-0/app-values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-19-0/app-values.yaml
@@ -225,6 +225,19 @@ Spec:
     #  Key: kops.k8s.io/instancegroup
     Values:
 
+affinity:
+  enabled: false
+  values:
+    podAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchExpressions:
+          - key: security
+            operator: In
+            values:
+            - S1
+        topologyKey: topology.kubernetes.io/zone   
+
 ambassadorMapping:
   enabled: false
   labels: {}
@@ -427,3 +440,4 @@ hostAliases: []
 #     hostnames:
 #     - "foo.remote"
 #     - "bar.remote"
+peristentVolumeClaim: {}
